profile page IE7 layout issue

--- a/app/assets/stylesheets/peoplefinder/peoplefinder-ie7.scss
+++ b/app/assets/stylesheets/peoplefinder/peoplefinder-ie7.scss
@@ -20,7 +20,9 @@ $border-color: #bfc1c3;
   color: white;
   text-decoration: none;
 }
-
+.grid-wrapper{
+  clear:both;
+}
 h1, h2 {
   margin: 30px 0;
   border-bottom: 1px solid #6f777b;
@@ -45,7 +47,7 @@ h1, h2 {
 }
 .breadcrumbs {
   margin-top: 1em;
-  margin-bottom: -9px;
+  margin-bottom: 9px;
   overflow: hidden;
 
   ol {
@@ -59,10 +61,13 @@ h1, h2 {
     }
   }
 }
-form #working-days ul{
+form #working-days ul,
+.working_days {
   float: left;
-}
-form #working-days ul li {
-  display: block;
-  float: left;
+
+  li {
+    display: block;
+    float: left;
+    margin-right: 3px;
+  }
 }
